# Makefile-Generator

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  makefile  test.sh
src/: BuildOptions.cpp  BuildOptions.h  File.cpp  File.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Flags.cpp  Flags.h  InputFile.cpp  InputFile.h  MakeGen.cpp  MakeGen.h  Makefile  Parser.cpp  Parser.h  SrcFile.cpp  SrcFile.h  StringCache.cpp  StringCache.h  Target.cpp  Target.h  arraylist.c  arraylist.h  dirent.h  field.cpp  field.h  filesystem.c  filesystem.cpp  filesystem.h  filter.h  hashmap.c  hashmap.h  interpreter.cpp  interpreter.h  libs.cpp  libs.h  link.cpp  link.h  (+24 more)
test/: TestMakefile.cpp
